--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -8,7 +8,10 @@
 <body>
 <div class="main">
 	<h1 class="name">Hi, {{name}}</h1><hr style="width: 30%">
-	<h3 class="email">{{emailAddress}}</h3>
+	<h3 class="email">Welcome to Food Recommendation</h3>
+	<form action="homepage.html">
+    	<input type="submit" value="Continue"/>
+	</form>
 </div>
 </body>
 </html>
