--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,19 +8,20 @@
 <body>
 <div class="wrapper">
 <div id="formContent">
-<form action="/updateProfile" method="POST" enctype="multipart/form-data">
+<form action="/profile" method="POST" enctype="multipart/form-data">
     <h2>Users' Profile</h2>
     <label for="name">Name: {{name}}</label><br><p>
     <label for="email">Email: {{emailAddress}}</label><br><p>
     <label for="selfie">Upload Selfie: </label>
-    <input type="file" name="selfie" accept="image/*"><br><p>
+    <input type="file" name="selfie"><br>
     <input type="submit" name="submit" value="Update">
 </form>
+
 </div>
 </div>
 <hr>
-{% for file in files%}
-    <img src="{{url_for('upload', filename=file) }}" style="width: 64px">
-{% endfor%}
+    {% for file in selfie %}
+        <img src="{{ url_for('upload', filename=file) }}" style="width: 64px">
+    {% endfor %}
 </body>
 </html>
