--- a/static/main.css
+++ b/static/main.css
@@ -3,7 +3,7 @@
 /* BASIC */
 
 html {
-  background-color: #56baed;
+  background-color: #FFDAB9;
 }
 
 body {
@@ -12,7 +12,7 @@ body {
 }
 
 a {
-  color: #92badd;
+  color: #FFDAB9;
   display:inline-block;
   text-decoration: none;
   font-weight: 400;
@@ -25,7 +25,7 @@ h2 {
   text-transform: uppercase;
   display:inline-block;
   margin: 40px 8px 10px 8px; 
-  color: #cccccc;
+  color: #FFDAB9;
 }
 
 
@@ -83,7 +83,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset]  {
-  background-color: #56baed;
+  background-color: #E5989B;
   border: none;
   color: white;
   padding: 15px 80px;
@@ -106,7 +106,7 @@ input[type=button], input[type=submit], input[type=reset]  {
 }
 
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-  background-color: #39ace7;
+  background-color: #E5989B;
 }
 
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
@@ -140,7 +140,7 @@ input[type=email], input[type=password], input[type=text] {
 
 input[type=email]:focus, input[type=password]:focus, input[type=text]:focus {
   background-color: #fff;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #E5989B;
 }
 
 input[type=email]:placeholder, input[type=password]:placeholder, input[type=text]:placeholder {
@@ -238,7 +238,7 @@ input[type=email]:placeholder, input[type=password]:placeholder, input[type=text
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #56baed;
+  background-color: #E5989B;
   content: "";
   transition: width 0.2s;
 }
