--- a/static/welcome.css
+++ b/static/welcome.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
 body{
 	margin: 0;
 	background-color: #212121;
@@ -15,11 +17,13 @@ body{
 
 .name{
 	font-size: 300%;
-	font-family: monospace;
+	font-weight: bold;
+	text-align: left;
+	font-family: "Poppins";
 }
 
 .email{
 	font-size: 150%;
-	color: #404040;
-	font-family: monospace;
+	color: #E5989B;
+	font-family: "Poppins";
 }
