--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -52,9 +52,9 @@
 
 </div>	
 <div class="main" style="background-color: #FFDAB9; text-align: left">
-	<h1 class="name" style="font-size: 40px; color: #4B3A35;font-weight: 400px">Eating Is<br>Butter Together</h1>
+	<h1 id="name">Eating Is<br>Butter Together</h1>
 	<br>
-	<h3 class="email" style="font-size: 20px; color: #4B3A35; font-weight: bold">Find, Share, and Recommend Restaurants with your friends</h3>
+	<h3 id="email">Find, Share, and Recommend Restaurants with your friends</h3>
 	<br>
 	<br>
 	<form action="/profile">
