--- a/templates/map.html
+++ b/templates/map.html
@@ -128,7 +128,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Login Page</a>
+          <a class="nav-link active" aria-current="page" href="/welcome">Welcome Page</a>
           </li>
           <li class="nav-item">
           <a class="nav-link" href="/map">Map</a>
