--- a/templates/map.html
+++ b/templates/map.html
@@ -1,14 +1,14 @@
-
+ 
 <!DOCTYPE html>
 <html>
   <title>Food Recommendation App</title>
-
+ 
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+ 
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0}
@@ -19,7 +19,7 @@
     </script>
     <input id="pac-input" class="controls" type="text" placeholder="i'm hungry...">
     <div class="container" id="map-canvas" style="height:0px;"></div>
-
+ 
     <!-- styles search bar -->
     <style>
       .controls {
@@ -33,7 +33,7 @@
         outline: none;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       } 
-
+ 
       #pac-input {
         background-color: #fff;
         padding: 0 11px 0 13px;
@@ -43,14 +43,14 @@
         font-weight: 300;
         text-overflow: ellipsis;
       }
-
+ 
       #type-selector {
         color: #fff;
         background-color: #4d90fe;
         padding: 5px 11px 0px 11px;
       }
 </style>
-
+ 
     <script type="text/javascript">
       function initialize() {
         // map options
@@ -72,31 +72,49 @@
   
       google.maps.event.addListener(searchBox, 'places_changed', function() {
       searchBox.set('map', null);
-
+ 
      var places = searchBox.getPlaces();
-
+ 
      // get icon, name, and location for each place
      var bounds = new google.maps.LatLngBounds();
      var i, place;
      for (i = 0; place = places[i]; i++) {
        (function(place) {
-
          var marker = new google.maps.Marker({ // produces a new marker for each result
           map: map,
           //icon: image, 
           title: place.name,
            position: place.geometry.location
          });
-
+ 
          // **** this opens a pop-up window when users click on a marker ****
-         var infowindow = new google.maps.InfoWindow({
-    content: place.name,
-  });
-  marker.addListener("click", () => {
-    infowindow.open(map, marker);
-  });
-    // ********
-
+         
+          
+          infowindow = new google.maps.InfoWindow(); 
+        marker.addListener("click", () => { 
+          infowindow.open(map, marker);
+          //infowindow.setContent(place.name + place.geometry.location);          
+ 
+          var nameOfPlace = place.name
+          var rating = "5/5" // placeholder for star rating
+          var address = "address" // placeholder for address
+ 
+          infowindow.setContent('<div id="content">'+
+            nameOfPlace + 
+            '<br>' + 
+            rating + 
+            '<br>' + 
+            address + 
+            '</div>')
+ 
+          google.maps.event.addListener(map, 'click', function() {
+              infoWindow.close();
+          }); 
+        }); 
+ 
+ 
+     // ********
+ 
          marker.bindTo('map', searchBox, 'map');
          google.maps.event.addListener(marker, 'map_changed', function() {
            if (!this.getMap()) {
@@ -105,8 +123,8 @@
          });
          bounds.extend(place.geometry.location);
        }(place));
-
      }
+ 
      // fits user screen to location of markers
      map.fitBounds(bounds);
      map.setZoom(Math.min(map.getZoom(),12));
@@ -115,10 +133,10 @@
  }
  google.maps.event.addDomListener(window, 'load', initialize);
     </script>
-
-
+ 
   </head>
   <body onload="initialize()">
+ 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navigate to different pages</a>
@@ -155,9 +173,7 @@
         </div>
       </div>
     </nav>
-    
-    <div id="map_canvas" style="width:100%; height:560px"></div>
-
+ 
+    <div id="map_canvas" style="width:100%; height:100%"></div>
   </body>
 </html>
-
