--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,7 @@
     <form action="/result" method="POST">
       <input type="email" id="login" class="fadeIn second" name="email" placeholder="email">
       <input type="password" id="password" class="fadeIn third" name="pass" placeholder="password">
+      <div class="msg">{{msg}}</div>
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
 
