--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Nom-Nom Welcome Back</title>
+	<title>Nom-Nom Logout</title>
 	 <link rel="stylesheet" type="text/css" href="../static/logout.css">
 	 
 </head>
