--- a/static/homepage.css
+++ b/static/homepage.css
@@ -37,4 +37,18 @@ body{
 	height: 5%;
 }
 
-
+.gotopbtn{
+	position: fixed;
+	width: 40px;
+	height: 40px;
+	bottom: 30px;
+	right: 40px;
+  
+	text-decoration: none;
+	text-align: center;
+	line-height: 40px;
+	color: white;
+	background-color: #6D6875;
+	font-size: 22px;
+  
+  }
