--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Nom-Nom Manage Profile</title>
-	 <link rel="stylesheet" type="text/css" href="../static/review.css">
+	<title>Nom-Nom Add Review</title>
+	 <link rel="stylesheet" type="text/css" href="../static/profile.css">
 	 
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -20,7 +20,7 @@ function myFunction(){
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 100%">
 		<div class="container-fluid">
-		    <a class="navbar-brand">Logo picture and app name: Nom-Nom</a>
+		    <img id="logoImage" src="../uploads/logo.png" alt="logo">
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		    </button>
@@ -33,34 +33,15 @@ function myFunction(){
 				    <a class="nav-link" href="/map">Our Map</a>
 			    </li>
 			    <li class="nav-item">
-				    <a class="nav-link" href="/community">Community</a>
+				    <a class="nav-link" href="/updateNews">Update News</a>
+			    </li>
+				<li class="nav-item">
+				    <a class="nav-link" href="/profile">Profile</a>
 			    </li>
 				<li class="nav-item">
 					<a class="nav-link" href = "javascript:void(0)" onclick="myFunction()">Log Out</a>
 				</li>			
-
-                <!--
-			    <li class="nav-item dropdown">
-				    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				        Dropdown
-				    </a>
-				    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-				        <li><a class="dropdown-item" href="#">Action</a></li>
-				        <li><a class="dropdown-item" href="#">Another action</a></li>
-				        <li><hr class="dropdown-divider"></li>
-				        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				    </ul>
-			    </li>
-			    <li class="nav-item">
-				    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-			    </li>                
-                -->
-
 			    </ul>
-			    <form class="d-flex">
-			        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-			        <button class="btn btn-outline-success" type="submit">Search</button>
-			    </form>
 		    </div>
 		</div>
 	</nav>
@@ -69,25 +50,25 @@ function myFunction(){
 <img src="{{ url_for('upload', filename=selfie) }}" style="width: 100px; height: 100px">
 </div>
 
-<h3 id="img-text" style="font-size: 20px; color: #4B3A35">Selfie</h3>
+<h3 id="img-text" style="font-size: 20px; color: #4B3A35">Photo for foods</h3>
 
 
 
 <div class="profile" style="text-align: left; padding: 35px">
 
-	<h1 id="name" style="font-size: 40px; color: #4B3A35;font-weight: bolder">Manage Profile</h1>
+	<h1 id="name" style="font-size: 40px; color: #4B3A35;font-weight: bolder">Add New Review</h1>
 	<br>
-    <h3 id="email" style="font-size: 20px; color: #4B3A35">Email: {{email}}</h3>
+    <h3 id="email" style="font-size: 20px; color: #4B3A35">Reviewer's Name: {{name}}</h3>
 
-    <form action="/profilechanged" method="POST" enctype="multipart/form-data">
+    <form action="/reviewAdded" method="POST" enctype="multipart/form-data">
 	    <input type="file" style="position: absolute; right:25px; top:350px;" name="selfie">
-        <h3 id="email" style="font-size: 20px; color: #4B3A35">Name:
-        <input type="text" id="name" name="name" placeholder="name"></h3>
-        <h3 id="email" style="font-size: 20px; color: #4B3A35">Date of Birth:
-        <input type="text" id="birth" name="birth" placeholder="dd/mm/yyyy"></h3>
-        <h3 id="email" style="font-size: 20px; color: #4B3A35">Self description:<br>		
-		<textarea rows="10" cols="60" name = "description" placeholder="Self description"></textarea></h3><p><br>
-    	<input type="submit" id="button"  value="Update the Profile">
+        <h3 id="email" style="font-size: 20px; color: #4B3A35">Restaurant's Name:
+        <input type="text" id="name" name="name" placeholder="Restuarant's name"></h3>
+        <h3 id="email" style="font-size: 20px; color: #4B3A35">Rating:
+        <input type="text" id="birth" name="birth" placeholder="5/5"></h3>
+        <h3 id="email" style="font-size: 20px; color: #4B3A35">Review Paragraph:<br>		
+		<textarea rows="10" cols="60" name = "description" placeholder="How is the meal in the restaurnt?Do they provide a good service?"></textarea></h3><p><br>
+    	<input type="submit" id="button"  value="Add Review">
 		<br>
 		<br>
     </form>
