--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <title>Welcome to Nom-Nom</title>
 	<link rel="stylesheet" type="text/css" href="../static/homepage.css">
-	 
+	 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>	 
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
@@ -45,12 +45,17 @@
 
     <!--About us part-->
     <div class="ourStory" style="background-color: #FFF9F4; text-align: left; padding: 200px" id="aboutus">
-	    <br>
-	    <br>
-	    <br>
 	    <h1 id="name" style="font-size: 40px">Our Story</h1>
 	    <br>
-	    <h3 id="email" style="font-size: 20px">We are a group passionate about finding good food and fostering friendship</h3>
+		<h3 class="email" style="font-size: 20px; color: #4B3A35">
+		We are a group passionate about finding good food and fostering friendship. While on our journey of exploring
+		where are the best spots for food, we find that we can't find a perfect food recommendation platform that
+		allows us to easily compile a list with friends. When we want to share food with friends, often we have to
+		screenshot or send the url, and then compile the spots into a list on a separate doc.<br>
+		<br>
+		Food sharing experience does not have to complicated and our platfrom aims to simplify its process while building that relationship with friends
+		so that we can <b>spend more time "NomNom"ing together </b><br>
+		</h3>
 	    <br>
 	    <br>
     </div>
@@ -61,8 +66,14 @@
 	    <br>
 	    <h1 id="name" style="font-size: 40px; font-weight: bolder; text-align: center">How It Works</h1>
 	    <br>
-	    <h3 id="email" style="font-size: 20px">Add in illustrations later here</h3>
-	    <br>
+		<h3 class="email" style="font-size: 20px; color: #4B3A35">Add in illustrations later here</h3>
+		1. Users will create an account such that the website can save all their information and personalize their webpage<br>
+		2. Then they can explore the map tab on the website to search and find food locations.<br>
+		3. When they found a location that they want to visit in the future, they can add the location to their list of restaurants<br>
+		4. They can also add friends to the list such that they can collaborate on creating a list tailored to food their journey<br>
+		<br>
+		So click on that "get started button" and start finding that perfect spot to <b>NomNom</b>!
+		<br>
 	    <br>
     </div>
 
@@ -74,11 +85,10 @@
 	    <br>
 	    <h1 id="name" style="font-size: 40px">Our Team</h1>
 	    <br>
-	    <h3 id="email" style="font-size: 20px">Upload selfie</h3>
-	    <br>
-	    <br>
+		<h3 class="email" style="font-size: 20px; color: #4B3A35">Add in illustrations later here</h3>
+
     </div>
 
-
+<a class="gotopbtn" href="#"> <i class="fas fa-arrow-up"></i>  </a>
 </body>
 </html>
