--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,6 +19,7 @@
       <input type="email" class="fadeIn second" name="email" placeholder="email">
       <input type="text" class="fadeIn third" name="birth" placeholder="dd/mm/yyyy">
       <input type="password" class="fadeIn third" name="pass" placeholder="password">
+      <div class="msg">{{msg}}</div>
       <input type="submit" class="fadeIn fourth" value="Sign Up">
     </form>
 
